--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "setter-getterify": "^1.0.0"
   },
   "devDependencies": {
-    "openmusic-oscilloscope": "^1.0.0"
+    "openmusic-oscilloscope": "^1.0.0",
+    "webcomponents-lite": "^0.6.0"
   }
 }
